# tex-tools

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  fetch.py
resources/: biblatex_fieldnames.txt  biblatex_fieldnames_unimplemented.txt
src/: biblatex.rs  escape.rs  lib.rs
tests/: db.json  main-filled.bib  main.bib
tests/biblatex/: article.bib  article.json  arxiv.bib  arxiv.json  book.bib  book.json  conference-paper.bib  conference-paper.json  honours-thesis.bib  honours-thesis.json  phd-thesis.bib  phd-thesis.json  tech-report.bib  tech-report.json  working-paper.bib  working-paper.json
