[package]
name = "tex-tools"
version = "0.2.1"
edition = "2021"
default-run = "bib-db"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
anyhow = { version = "^1.0" }

[dependencies]
anyhow = { version = "^1.0" }
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
tokio = { version = "1.18.1", features = ["macros", "rt"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
posix-cli-utils = { git = "https://github.com/ykrist/posix-cli-utils.git" }
clap = { version = "3.1.15", features = ["derive"] }
jsonschema = "0.16.0"
lazy_static = "1.4.0"
governor = "0.4.2"
assert_cmd = "2.0.4"
unicode-normalization = "0.1.19"
dirs = "4.0.0"
urlencoding = "2.1.0"
futures = "0.3.21"
regex = "1.5.6"

[dev-dependencies]
pretty_assertions = "1.2.1"

[[bin]]
name = "bib-db"
path = "src/bin/bib_db/main.rs"
